# BigData-Project

./: .gitignore  Makefile  README.md  pyproject.toml
experiments/: gab.yaml  gab_h_c1_1.yaml  gab_h_c1_1_150.yaml  gab_h_c1_2.yaml  gab_h_c1_2_150.yaml  gab_h_c2_1.yaml  gab_h_c2_1_150.yaml  gab_h_c2_2.yaml  gab_h_c2_2_150.yaml  gab_h_c3_1.yaml  gab_h_c3_1_150.yaml  gab_incremental.yaml  gab_incremental_coldstart.yaml  gab_incremental_h.yaml  gab_incremental_interesting_config.yaml  gab_incremental_interesting_egcno.yaml  gab_incremental_o.yaml  parameters_bitcoin_otc_linkpred_egcn_h.yaml  parameters_example.yaml
notebooks/: 1-DescribeData.ipynb
reports/: businessunderstanding.tex  conclusion.tex  datapreparation.tex  dataunderstanding.tex  deployment.tex  evaluation.tex  front.tex  main.bib  main.tex  modeling.tex  notes.md
reports/presentation/: sample.tex
src/: GabDataset.py  LinkPrediction.py  __init__.py  bitcoin_dl.py  create_embeddings.py  cross_entropy.py  graph_metrics.py  infer_synthetic_incremental.py  link_pred_tasker.py  log_analyzer.py  logger.py  models.py  run_exp.py  splitter.py  taskers_utils.py  trainer.py  utils.py
src/EvolveGCNORIGINAL/: .gitignore  Cross_Entropy.py  create_gab_embeddings.py  egcn_h.py  egcn_o.py  gab.py  link_pred_tasker.py  log_analyzer.py  logger.py  models.py  pyproject.toml  run_exp.py  splitter.py  taskers_utils.py  trainer.py  utils.py  wandb_logger.py
src/EvolveGCNORIGINAL/experiments/: gab_loocv_c1_1.yaml  gab_loocv_c1_2.yaml  gab_loocv_c2_1.yaml  gab_loocv_c2_2.yaml
src/EvolveGCNORIGINAL/plot/: plot_tsne_embeddings.py
src/embedding_analysis/: README.md  analyze_gcn_embeddings.py  analyze_multi_model_gcn.py  analyze_nearest_neighbors.py  analyze_real_embeddings.py  analyze_synthetic_embeddings.py  analyze_user_embeddings.py  compare_embeddings.py  run_all.py  run_bert_only.py  visualize_embeddings.py  visualize_multi_model_gcn.py
src/modeling/: MLP.py  egcn_h.py  egcn_o.py  losses.py
