[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bigdata_project"
version = "0.0.1"
description = "Studying the temporal evolution in link prediction of risky users in social network"
authors = [
  { name = "Mattia Curri" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "pip",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["bigdata_project"]
include = ["pyproject.toml", "bigdata_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["bigdata_project"]
force-sort-within-sections = true

