[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Studying the temporal evolution in link prediction of risky users in social network"
authors = [
  { name = "Mattia Curri" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.22,<2.4",
    "pandas>=3.0.0",
    "python-dotenv",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.6",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "torch-geometric>=2.7.0",
    "wandb>=0.24.1",
    "networkx>=3.6.1",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting
# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Google convention via `convention = "google"`, below.
select = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff",
    "ty"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-gpu" },
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true


